--- a/Controls/MediaQuery/Lists/List.xaml
+++ b/Controls/MediaQuery/Lists/List.xaml
@@ -8,13 +8,42 @@
     Height="auto"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel Background="LightGray">
-            <local:ListItem Height="30" Margin="0,10" />
-            <local:ListItem Height="30" Margin="0,10" />
-            <local:ListItem Height="30" Margin="0,10" />
-            <local:ListItem Height="30" Margin="0,10" />
-            <local:ListItem Height="30" Margin="0,10" />
-        </StackPanel>
-    </ScrollViewer>
+    <UserControl.Resources>
+
+        <DataTemplate x:Key="BigList">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <StackPanel Background="LightGray">
+                    <local:ListItem Height="30" Margin="0,10" />
+                    <local:ListItem Height="30" Margin="0,10" />
+                    <local:ListItem Height="30" Margin="0,10" />
+                    <local:ListItem Height="30" Margin="0,10" />
+                    <local:ListItem Height="30" Margin="0,10" />
+                </StackPanel>
+            </ScrollViewer>
+        </DataTemplate>
+
+        <DataTemplate x:Key="SmallList">
+            <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <StackPanel Background="LightGray">
+                    <local:ListItem Height="20" Margin="0,2" />
+                    <local:ListItem Height="20" Margin="0,2" />
+                    <local:ListItem Height="20" Margin="0,2" />
+                    <local:ListItem Height="20" Margin="0,2" />
+                    <local:ListItem Height="20" Margin="0,2" />
+                </StackPanel>
+            </ScrollViewer>
+        </DataTemplate>
+
+    </UserControl.Resources>
+    <UserControl.Style>
+        <Style TargetType="ContentControl">
+            <Setter Property="ContentTemplate" Value="{StaticResource BigList}" />
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ActualWidth, RelativeSource={RelativeSource Self}, Converter={StaticResource BreakpointConverter}, ConverterParameter=250}" Value="True">
+                    <Setter Property="ContentTemplate" Value="{StaticResource SmallList}" />
+                </DataTrigger>
+            </Style.Triggers>
+
+        </Style>
+    </UserControl.Style>
 </UserControl>
